fix: ensure consistent alignment in apresentacao class

--- a/html-css/Alura/Repositorio/style.css
+++ b/html-css/Alura/Repositorio/style.css
@@ -4,6 +4,7 @@
 }
 .apresentacao{
     display: flex;
+    align-items: center;
 }
 body{
     height: 100vh;
